--- a/package.json
+++ b/package.json
@@ -8,5 +8,10 @@
   },
   "peerDependencies": {
     "typescript": "^5"
-  }
+  },
+  "scripts": {
+        "dev": "bun src/index.ts",
+        "build": "bun build src/index.ts --outdir ./out",
+        "type-check": "tsc"
+      }
 }
