--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "scripts": {
         "dev": "bun src/index.ts",
-        "build": "bun build src/index.ts --outdir ./out",
+        "build": "bun build src/index.ts --outdir ./dist",
         "type-check": "tsc"
       }
 }
